--- a/css/style.css
+++ b/css/style.css
@@ -64,3 +64,12 @@ footer .copy-right{
     }
    
 }
+
+@media screen and (max-width: 768px)
+{
+    footer .social a{
+        height: 40px;
+        line-height: 40px;
+        width: 40px;
+    }
+}
